--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ body.dark-mode {
   }
 }
 .hero-title {
+  padding-top: 100px;
   font-size: 2.25rem;
   font-weight: 700;
   margin-bottom: 1rem;
