--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body.dark-mode {
   margin-top: -0.25rem;
 }
 .nav-menu {
-  display: none;
+  display: inline-flex;
   list-style: none;
   gap: 1.5rem;
 }
@@ -170,33 +170,6 @@ body.dark-mode {
 .nav-link:hover {
   color: var(--color-primary);
 }
-
-.theme-toggle {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.75rem 1.5rem;
-  border-radius: 0.5rem;
-  font-weight: 500;
-  text-decoration: none;
-  transition: all 0.2s ease;
-  cursor: pointer;
-  border: none;
-  font-size: 1rem;
-  background: var(--color-surface);
-  color: var(--color-text-primary);
-  border: 1px solid var(--color-border);
-  padding: 0.5rem 0.75rem;
-  border-radius: 0.5rem;
-}
-.theme-toggle:hover {
-  background: var(--color-primary);
-  color: white;
-}
-.theme-toggle .theme-icon {
-  font-size: 1.125rem;
-}
-
 /* ===== SEÇÃO HERO ===== */
 
 .hero {
@@ -542,7 +515,7 @@ body.dark-mode {
 }
 .project-link{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .project-tech{
   display: flex;
@@ -772,6 +745,8 @@ body.dark-mode {
   opacity: 0.8;
 }
 
+
+
 /* ===== RESPONSIVIDADE E ANIMAÇÕES ===== */
 @media (max-width: 767px) {
   .nav-menu {
@@ -819,7 +794,68 @@ html {
   display: block;
   margin: 0 auto; /* centralizar */
 }
-
 .main-content {
     padding-top: 80px; /* igual à altura do header */
+}
+
+/* =====  Botão switch ===== */
+
+.theme-switch {
+  position: relative;
+  display: inline-flex;
+  width: 80px;
+  height: 36px;
+}
+
+.theme-switch input {
+  opacity: 1;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: relative;
+  cursor: pointer;
+  background-color: var(--color-primary);
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 8px;
+  transition: background-color 0.3s ease;
+  height: 100%;
+  width: 90%;
+  box-sizing: border-box;
+  user-select: none;
+}
+
+.slider .theme-icon{
+  order: 1;/* Colocar sol no lado direito */
+}
+
+.slider .theme-icon-moon {
+  order: 2; /*Colocar lua no lado esquerdo */
+}
+
+
+.slider::before {
+  content: "";
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  left: 4px;
+  top: 4px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 0.3);
+  z-index: 1;
+}
+
+input:checked + .slider {
+  background-color: var(--color-primary);
+}
+
+input:checked + .slider:before {
+  transform: translateX(36px);
 }
