--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@ body.dark-mode {
 .section-title {
   font-size: 1.875rem;
   font-weight: 700;
+  display: flex;
+  justify-content: center;
   text-align: center;
   margin-bottom: 3rem;
   color: var(--color-text-primary);
@@ -267,8 +269,8 @@ body.dark-mode {
   justify-content: center;
 }
 .hero-image .profile-placeholder {
-  width: 500px;
-  height: 500px;
+  width: 200px;
+  height: 200px;
   background: linear-gradient(135deg, var(--color-primary), var(--color-accent));
   border-radius: 50%;
   display: flex;
@@ -533,27 +535,12 @@ body.dark-mode {
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
-}
-.timeline::before {
-  /* content: ; colocar "" para aperecer uma barra entre as experiencias*/
-  position: absolute;
-  left: 1.5rem;
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background: var(--color-border);
-}
-@media (min-width: 768px) {
-  .timeline::before {
-    left: 50%;
-    transform: translateX(-50%);
-  }
 }
 .timeline-item {
-  position: relative;
-  margin-bottom: 3rem;
-  padding-left: 4rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 @media (min-width: 768px) {
   .timeline-item {
@@ -590,6 +577,8 @@ body.dark-mode {
   background: var(--color-surface);
   border: 1px solid var(--color-border);
   border-radius: 1rem;
+  margin: auto;
+  width: 100%;
   padding: 1.5rem;
   transition: all 0.3s ease;
 }
@@ -609,13 +598,7 @@ body.dark-mode {
   color: var(--color-primary);
   margin-bottom: 0.5rem;
 }
-.timeline-content .timeline-date {
-  font-size: 0.875rem;
-  color: var(--color-text-secondary);
-  font-weight: 500;
-  display: block;
-  margin-bottom: 1rem;
-}
+
 .timeline-content p {
   color: var(--color-text-secondary);
   line-height: 1.6;
